--- a/index.html
+++ b/index.html
@@ -3,13 +3,12 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Mountain Travel</title>
+  <title>Business Site</title>
   <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Quicksand" rel="stylesheet">
   <link rel="stylesheet" href="assets/css/styles.css">
 </head>
 <body>
-
   <header>
     <h2><a href="#">Business Site</a></h2>
     <nav>
@@ -18,15 +17,21 @@
       <li><a href="#">Contact</a></li>
     </nav>
   </header>
-
   <section class="hero">
     <div class="background-image" style="background-image: url(assets/img/main.jpg);"></div>
     <div class="hero-content-area">
-      <h1>Mountain Travel</h1>
-      <h3>Unmissable Adventure Tours Around The World</h3>
-      <a href="#" class="btn">Contact Us Now</a>
+        <h1>Business Site</h1>
+        <h3>Subtitle</h3>
+        <a class="btn" href="#">Contact Us Now</a>
     </div>
   </section>
-  
+
+  <section class="destinations">
+    <h3 class="title">Some of our products</h3>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.Sit quas ea laudantium architecto corrupti incidunt nulla? 
+      Quis cupiditate dignissimos consequuntur.</p>
+  </section>
+
+
 </body>
 </html>
