--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <title>Business Site</title>
   <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Quicksand" rel="stylesheet">
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
   <link rel="stylesheet" href="assets/css/styles.css">
 </head>
 <body>
@@ -30,7 +31,46 @@
     <h3 class="title">Some of our products</h3>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.Sit quas ea laudantium architecto corrupti incidunt nulla? 
       Quis cupiditate dignissimos consequuntur.</p>
+    <hr>
+
+    <ul class="grid">
+      <li class="small" style="background-image: url(assets/img/mountain1.jpg);"></li>
+      <li class="small" style="background-image: url(assets/img/mountain2.jpg);"></li>
+      <li class="small" style="background-image: url(assets/img/mountain3.jpg);"></li>
+      <li class="small" style="background-image: url(assets/img/mountain4.jpg);"></li>
+    </ul>
   </section>
+
+  <section class="packages">
+    <h3 class="title">Tour Packages</h3>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorem iure non,
+  consequuntur impedit numquam debitis architecto quos. Unde, vitae iure.</p>
+    <hr>
+  
+    <ul class="grid">
+      <li>
+        <i class="fa fa-compass fa-4x"></i>
+        <h4>Guided Tours</h4>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti, saepe.</p>
+      </li>
+      <li>
+        <i class="fa fa-camera-retro fa-4x"></i>
+        <h4>Photo Trips</h4>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi, labore.</p>
+      </li>
+      <li>
+        <i class="fa fa-bicycle fa-4x"></i>
+        <h4>Biking Trips</h4>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eligendi, aliquam.</p>
+      </li>
+      <li>
+        <i class="fa fa-flag-checkered fa-4x"></i>
+        <h4>Racing Trips</h4>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Provident, illo?</p>
+      </li>
+    </ul>
+</section>
+  
 
 
 </body>
