add testimonials section

--- a/index.html
+++ b/index.html
@@ -71,7 +71,23 @@
     </ul>
 </section>
   
+<section class="testimonials">
+  <h3 class="title">Testimonials from our adventurers</h3>
+  <hr>
+  <p class="quote">Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+    Eius qui aliquid modi, illo ea molestias aperiam commodi possimus 
+    consequuntur. Excepturi?</p>
+  <p class="author">- Colt Steele</p>
+  <p class="quote">Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+     Suscipit numquam itaque similique maiores accusantium voluptates
+      tempore mollitia sequi, esse provident?</p>
+  <p class="author"> - Tim Garcia</p>
+  <p class="quote">Lorem ipsum dolor sit amet consectetur adipisicing elit.
+     Veniam veritatis non commodi eos consequatur dolores hic perspiciatis
+      inventore et quia?</p>
+  <p class="author">Elie Schoopik</p>
 
+</section>
 
 </body>
 </html>
