--- a/index.html
+++ b/index.html
@@ -89,5 +89,29 @@
 
 </section>
 
+<section class="contact">
+  <h3 class="title">Learn More</h3>
+  <p>
+    Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ut perferendis,
+    error itaque molestias eaque placeat accusamus ratione dolorem ad labore
+    distinctio doloremque iste earum consectetur nemo reiciendis harum, quas numquam!
+  </p>
+  <hr>
+  <form>
+    <input type="email" placeholder="email">
+    <a href="#" class="btn">Subscribe now!</a>
+  </form>
+</section>
+
+<footer>
+  <p>Lorem, ipsum dolor sit adipisicing elit. Sunt, est.</p>
+  <p>Lorem ipsum dolor sit amet adipisicing elit.</p>
+  <ul>
+    <li><a href="#"><i class="fab fa-twitter fa-2x"></i></a></li>
+    <li><a href="#"><i class="fab fa-facebook fa-2x"></i></a></li>
+    <li><a href="#"><i class="fab fa-snapchat fa-2x"></i></a></li>
+  </ul>
+
+</footer>
 </body>
 </html>
